syntax = "proto3";

message LogisticRegressionTrainRequest {
	double LearningRate = 1;
	double ElasticRate = 2;

	uint64 NetworkIterationCount = 3;
	uint64 LocalIterationCount = 4;
	uint64 LocalBatchSize = 5;
}
message LogisticRegressionTrainResponse {
	bytes ModelID = 1;
}

message LogisticRegressionPredictRequest {
	bytes ModelID = 1;

	repeated double ToPredict = 2;
}
message LogisticRegressionPredictResponse {
	bool Prediction = 1;
}
